Fix invisible <hr>

--- a/stylus/Humanoid.styl
+++ b/stylus/Humanoid.styl
@@ -102,6 +102,6 @@ kbd
 // Horizontal rule
 hr
   margin 2em
-  height .5px
+  height 1px
   background-color $accent-color
   border-width 0
