--- a/stylus/Watson.styl
+++ b/stylus/Watson.styl
@@ -84,6 +84,6 @@ kbd
 // Horizontal rule
 hr
   margin 2em
-  height .5px
+  height 1px
   background-color $accent-color
   border-width 0
